- 表单、列表模板页更新 - 修复 MonacoEditor bug - 去掉 ComponentSchema 中的 RenderFragment（因为无法序列化），改为自定义的对象，支持序列化，便于组件 Schema 的读取和写入 - 注册 Controller 服务及中间件 - 支持保存元数据，并从已有元数据加载组件和 DesignPanel

--- a/src/Admin/H.LowCode.Admin/Pages/Index.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Index.razor
@@ -5,25 +5,10 @@
 
 <p>页面设计示例：</p>
 <p>
-    <a href="/designer/appid/pageid" target="_blank">默认设计器</a>
+    <a href="/designer/testapp/newpage" target="_blank">页面设计器</a>
 </p>
 <p>
-    <a href="/designer/appid/pageid?p=form" target="_blank">表单设计器</a>
-</p>
-<p>
-    <a href="/designer/appid/pageid?p=list" target="_blank">列表设计器-List</a>
-</p>
-<p>
-    <a href="/designer/appid/pageid?p=table" target="_blank">列表设计器-Table</a>
-</p>
-<p>
-    <a href="/designer/appid/pageid?p=card" target="_blank">列表设计器-Card</a>
-</p>
-<p>
-    <a href="/designer/appid/pageid?p=workbench" target="_blank">工作台设计器</a>
-</p>
-<p>
-    <a href="/designer/appid/pageid?p=portal" target="_blank">门户设计器</a>
+    <a href="/designer/testapp/7330f7a5-8ae6-47b7-b30d-548720dc19fc" target="_blank">页面设计器 (已有元数据)</a>
 </p>
 
 <p>&nbsp;</p>
