--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
@@ -1,4 +1,6 @@
-﻿<Layout Style="height:100%">
+﻿@inherits DesignEngineComponentBase
+
+<Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
         <DropItemContainer ContainerComponent="@CreatComponent("layoutcontainer-sider")"></DropItemContainer>
     </Sider>
@@ -8,48 +10,5 @@
 </Layout>
 
 @code {
-    [Parameter]
-    public ComponentSchema Component{ get; set; }
 
-    /// <summary>
-    /// 保存初始的 Component，避免跟随 Component 变化
-    /// </summary>
-    private ComponentSchema _component;
-
-    #region Init
-    protected override void OnInitialized()
-    {
-        Init();
-
-        base.OnInitialized();
-    }
-
-    private void Init()
-    {
-        if (_component == null)
-            _component = Component.CopyNew();
-    }
-    #endregion
-
-    private ComponentSchema CreatComponent(string key)
-    {
-        if (Component.Childrens.Count >= 2)
-        {
-            return Component.Childrens.FirstOrDefault(t =>
-            {
-                if (t.ComponentProperty.ExtensionData.ContainsKey(key))
-                    return true;
-                return false;
-            });
-        }
-
-        var component = _component.CopyNew();
-        component.IsContainerComponent = true;
-        component.ComponentProperty.ExtensionData.Add(key, key);
-        component.ParentId = Component.Id;
-
-        Component.Childrens.Add(component);
-
-        return component;
-    }
 }
