--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using AntDesign;
-@using H.LowCode.DesignEngine.Services
+@using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine.DesignPanel
+@using H.LowCode.DesignEngine.Services
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
