--- a/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/PageTemplates/TableTemplate.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/PageTemplates/TableTemplate.razor
@@ -1,6 +1,101 @@
-﻿<h3>TableTemplate</h3>
+﻿<Layout Style="height:100%">
+    <Sider Style="background: #f4f7fa; height:100%;">
+        <Tree @ref="tree" DefaultExpandAll BlockNode
+              ShowIcon DataSource="games"
+              TitleExpression="x => x.DataItem.Text"
+              ChildrenExpression="x => x.DataItem.Items"
+              IconExpression="x => x.DataItem.Icon"
+              IsLeafExpression="x => x.DataItem.Items?.Count == 0"
+              KeyExpression="x => x.DataItem.Id"
+              TItem="GameElement">
+        </Tree>
+    </Sider>
+    <Content Style="height: 100%;">
+        <TableWrap></TableWrap>
+    </Content>
+</Layout>
 
 @code {
-    [Parameter]
-    public ComponentSchema Component { get; set; }
+    #region Init
+    protected override void OnInitialized()
+    {
+        Init();
+
+        base.OnInitialized();
+    }
+
+    private void Init()
+    {
+        
+    }
+    #endregion
+
+    #region tree
+    Tree<GameElement> tree;
+
+    string selectedKey;
+
+    GameElement selectedData;
+
+    TreeNode<GameElement> selectedNode;
+
+    List<GameElement> games = new()
+    {
+        new ("0-0","0-0")
+        {
+            Items = new List<GameElement>()
+            {
+                new ("0-0-0","0-0-0")
+                {
+                    Items = new List<GameElement>()
+                    {
+                        new ("0-0-0-0","0-0-0-0"),
+                        new ("0-0-0-1","0-0-0-1"),
+                        new ("0-0-0-2","0-0-0-2"),
+                    }
+                },
+                new ("0-0-1","0-0-1")
+                {
+                   Items = new List<GameElement>()
+                   {
+                       new ("0-0-1-0","0-0-1-0"),
+                       new ("0-0-1-1","0-0-1-1"),
+                       new ("0-0-1-2","0-0-1-2"),
+                   }
+                },
+                new ("0-0-2","0-0-2")
+                {
+                   Items = new List<GameElement>()
+                   {
+                       new ("0-0-2-0","0-0-2-0"),
+                       new ("0-0-2-1","0-0-2-1"),
+                       new ("0-0-2-2","0-0-2-2"),
+                   }
+                 },
+            }
+        },
+        new ("0-1","0-1")
+        {
+            Items = new List<GameElement>()
+            {
+                new ("0-1-0","0-1-0"),
+                new ("0-1-1","0-1-0"),
+                new ("0-1-2","0-1-2"),
+            }
+        },
+        new ("0-2","0-2")
+        {
+            Items = new List<GameElement>()
+            {
+                new ("0-2-0","0-2-0"),
+                new ("0-2-1","0-2-1"),
+            }
+        }
+    };
+
+    private record GameElement(string Id, string Text, string Icon = null)
+    {
+        public List<GameElement> Items { get; set; } = new List<GameElement>();
+    }
+    #endregion
 }
