--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
@@ -16,7 +16,7 @@
                             <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@componentProvider.Title</div>
                             @foreach (var component in componentProvider.LoadComponent())
                             {
-                                <DragItem ComponentSchema="component"></DragItem>
+                                <DragItem Component="component"></DragItem>
                             }
                         </div>
                     }
@@ -28,7 +28,8 @@
                             <div style="border-left: 5px solid #d0d4da;padding: 0 0 0 8px; margin:5px 0;">@pageTemplateProvider.Title</div>
                             @foreach (var component in pageTemplateProvider.LoadPageTemplate())
                             {
-                                <DragItem ComponentSchema="component"></DragItem>
+                                @* Style="width: 14.1rem; height: 5rem;" *@
+                                <DragItem Component="component"></DragItem>
                             }
                         </div>
                     }
