--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor
@@ -1,17 +1,20 @@
 ﻿@if(Component != null)
 {
-    <div class="propertysetting-item">
-        <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
-        <Input TValue="string" @bind-value="@Component.ComponentProperty.Name" OnChange="(value) => OnPropertyChange()" />
-    </div>
-    <div class="propertysetting-item">
-        <label>标题：</label>
-        <Input TValue="string" @bind-value="@Component.ComponentProperty.Title" OnChange="(value) => OnPropertyChange()" />
-    </div>
-    <div class="propertysetting-item">
-        <label>描述：</label>
-        <TextArea @bind-value="@Component.ComponentProperty.Description" />
-    </div>
+    @if (Component.IsContainerComponent == false)
+    {
+        <div class="propertysetting-item">
+            <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
+            <Input TValue="string" @bind-value="@Component.ComponentProperty.Name" OnChange="(value) => OnPropertyChange()" />
+        </div>
+        <div class="propertysetting-item">
+            <label>标题：</label>
+            <Input TValue="string" @bind-value="@Component.ComponentProperty.Title" OnChange="(value) => OnPropertyChange()" />
+        </div>
+        <div class="propertysetting-item">
+            <label>描述：</label>
+            <TextArea @bind-value="@Component.ComponentProperty.Description" />
+        </div>
+    }
     @if (Component.ComponentProperty.IsShowProperty(nameof(ComponentPropertySchema.DefaultValue)))
     {
         <div class="propertysetting-item">
@@ -84,21 +87,6 @@
     {
 
     }*@
-
-    @if (Component.ComponentProperty.IsShowProperty(nameof(ComponentStyleSchema.ItemWidth)))
-    {
-        <div class="propertysetting-item">
-            <label>组件宽度：</label>
-            <Slider TValue="double" Value="@Component.ComponentStyle.ItemWidth" DefaultValue="12" Min="4" Max="24" OnChange="(value) => OnPropertyChange()" />
-        </div>
-    }
-    @if (Component.ComponentProperty.IsShowProperty(nameof(ComponentStyleSchema.LabelWidth)))
-    {
-        <div class="propertysetting-item">
-            <label>标签宽度：</label>
-            <Slider TValue="double" Value="@Component.ComponentStyle.LabelWidth" DefaultValue="180" Min="4" Max="300" OnChange="(value) => OnPropertyChange()" />
-        </div>
-    }
 
     @*扩展属性*@
     @if (Component.ComponentProperty.ExtensionProperties != null)
